# advent_of_code_2021

./: Cargo.toml  README.md  sdh.txt
.githooks/: pre-commit
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
src/common/: cardinal.rs  linked_list_circ.rs  mod.rs  mode.rs  modulus.rs  parser.rs  point.rs  point2.rs  point3.rs  range2.rs  range3.rs  tile.rs
tools/: auto_bench.py  time.py
