[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["schteve <stevenheindel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
auto_ops = "0.3.0"
nom = "7"
num = "0.4.0"
